# AllSeaingVehicle2

./: .gitignore  .gitmodules  README.md  metadata_lidar.yaml  metadata_perception.yaml  setup.sh
log/: latest_build
rosbag2_2023_10_22-16_43_52/: metadata.yaml
src/: boat_sim.py
src/allseaing_main/: CMakeLists.txt  package.xml
src/allseaing_main/launch/: mavros.launch.py
src/allseaing_main/src/: state_reporter.cpp
src/asv_interfaces/: CMakeLists.txt  package.xml
src/asv_interfaces/msg/: ASVState.msg  ControlMessage.msg  GoalState.msg  LabeledBoundingBox2DArray.msg  ObjectArray.msg
src/controller_suite/: CMakeLists.txt  package.xml
src/controller_suite/launch/: xdrive_launch.launch.py
src/controller_suite/params/: dual_ekf_navsat.yaml
src/controller_suite/src/: goal_publisher.py  sample_publisher.py  simple_controller.py  state_publisher.py  xdrive_controller.py
src/perception_suite/: CMakeLists.txt  package.xml
src/perception_suite/msg/: LabeledBoundingBox2DArray.msg  Object.msg  ObjectArray.msg
src/perception_suite/perception_suite/: pcl_utils.py  yolov5_detector.py
src/perception_suite/src/: buoy_detector.py  pcd_transformer.cpp  pointcloud_sub.py  topic_to_image.py  yolov5_detector.py  yolov5_image.py
src/perception_suite/src/pointcloud_cluster_detect/include/: cluster.h
src/perception_suite/src/pointcloud_image_fusion/: pointcloud_image_overlay.cpp  pointcloud_image_overlay.h  pointcloud_image_overlay_node.cpp
src/pilot_suite/: CMakeLists.txt  package.xml
src/pilot_suite/src/: pwm_sender.py
src/protobuf_client_interfaces/: CMakeLists.txt  package.xml
src/protobuf_client_ros2/: CMakeLists.txt  package.xml
src/protobuf_client_ros2/include/protobuf_client/src/protobuf_client_ros2/include/protobuf_client/: gateway.pb.cc  gateway.pb.h
src/protobuf_client_ros2/src/: message_parser.cpp  message_sender.cpp  message_sender_goal.cpp  protobuf_client_node.cpp
src/robot_description/launch/: athena_rviz.launch.py
src/robot_description/models/athena/urdf/: athena.urdf.xacro
src/vessels/flagship/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vessels/flagship/flagship/: localize.py
src/vessels/flagship/launch/: ekf_localize.launch.py
src/vessels/flagship/params/: dual_ekf_navsat.yaml
src/vessels/flagship/src/: localize.cpp
src/vessels/vrx_2023/: CMakeLists.txt  package.xml
src/vessels/vrx_2023/custom_wamv/: xdrive_component_config.xacro  xdrive_component_config.yaml
src/vessels/vrx_2023/docker/: Dockerfile  run_my_system.bash
src/vessels/vrx_2023/launch/: acoustic_perception.launch.py  acoustic_tracking.launch.py  master.launch.py  perception.launch.py  stationkeeping.launch.py  test.launch.py  wayfinding.launch.py  wildlife.launch.py  xdrive_launch.launch.py
src/vessels/vrx_2023/launch/py_pubsub/: setup.py
src/vessels/vrx_2023/params/: dual_ekf_navsat.yaml
src/vessels/vrx_2023/resource/: wamv_target.urdf
src/vessels/vrx_2023/src/: acoustic_tracking_sub.py  acoustic_wpt_sender.py  pwm_subscriber.py  sample_publisher.py  stationkeeping.py  waypoints.py  wildlife_simple.py  write_bag_to_png.py  xdrive_controller.py
src/vessels/vrx_2023/src/py_pubsub/: package.xml  setup.py  subscriber.py
src/vessels/vrx_2023/vrx_2023/: task_node.py  waypoints.py
