<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>protobuf_client_interfaces</name>
  <version>0.0.0</version>
  <description>Package with gateway msgs for MOOS-ROS2 gateway</description>
  <maintainer email="toyatakahashi522@gmail.com">toyat</maintainer>
  <license>Apache License 2.0</license>

  <depend>std_msgs</depend>

  <build_depend>builtin_interfaces</build_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend> 
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
